--- a/src/hpc-web/src/main/resources/templates/collectionsearchresult.html
+++ b/src/hpc-web/src/main/resources/templates/collectionsearchresult.html
@@ -285,6 +285,22 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', 'uiGridGroupingConst
     	document.getElementById("editsearchform").submit();
     };
    
+    $scope.bulkUpdate = function() {
+    	var updatedList = [];
+    	document.getElementById("bulkMetadataform").elements.namedItem("selectedFilePaths").value = updatedList;
+        if(source == "criteria")
+          document.getElementById("searchType3").value = "criteria";
+        else
+          document.getElementById("searchType3").value = "search";
+        document.getElementById("bulkMetadataform").elements.namedItem("totalCount").value =  totalRows;
+        document.getElementById("bulkMetadataform").elements.namedItem("updateAll").value =  "true";
+        document.getElementById("bulkMetadataform").elements.namedItem("pageNumber").value =  currentPage;
+        document.getElementById("bulkMetadataform").elements.namedItem("pageSize").value =  currentPageSize;
+        document.getElementById("bulkMetadataform").elements.namedItem("queryName").value = queryName;
+       document.getElementById("downloadType3").value = "collections";
+        document.getElementById("bulkMetadataform").submit();
+    };
+    
     $scope.performActionSelectedRows = function(action) {
         console.log('$scope.selectedRows: ', $scope.selectedRows);
         console.log('hpcSelectedDatafileList: ', hpcSelectedDatafileList);
@@ -416,6 +432,9 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', 'uiGridGroupingConst
 									<a id="editsearchlink"
 										class="btn btn-link btn-sm" ng-click="editSearch()"
 										>Edit Search Criteria</a>
+									<a id="bulkUpdate"
+										class="btn btn-link btn-sm" ng-click="bulkUpdate()"
+										>Update Metadata on Search Results </a>
 								</div>
 							  </div>
 							  <div class="row" style="background-color: #fff;border-top: 1px solid #ccc;border-bottom: none;">
@@ -496,6 +515,8 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', 'uiGridGroupingConst
 						<input type="hidden" id="pageNumber3" name="pageNumber"/>
 						<input type="hidden" id="pageSize3" name="pageSize"/>
 						<input type="hidden" id="queryName3" name="queryName"/>
+						<input type="hidden" id="totalCount" name="totalCount"/>
+						<input type="hidden" id="updateAll" name="updateAll"/>
 					</form>
 					<form class="form-horizontal" id="editsearchform" action="#"
 						role="form" th:action="@{/editSearch}" th:object="${hpcSearch}"
