HPCDATAMGM-1762: Multiple Archives access from Browse section - Quick fix for the data hierarchy modal

--- a/src/hpc-web/src/main/resources/templates/browse.html
+++ b/src/hpc-web/src/main/resources/templates/browse.html
@@ -815,6 +815,12 @@ var menuAPI = $('#tree1').jqTreeContextMenu($('#myMenu'), {
     $('#bookmarksDiv').toggle();
   });
 
+  $('#validhierarchyModal').on('hidden.bs.modal', function(e)
+  { 
+	$(this).removeData();
+  }) ;
+
+  
 /*]]>*/
 </script>
 
