HPCDATAMGM-1786: Search results screen needs ability to select all records with single click (Label changes)

--- a/src/hpc-web/src/main/resources/templates/collectionsearchresult.html
+++ b/src/hpc-web/src/main/resources/templates/collectionsearchresult.html
@@ -434,7 +434,7 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', 'uiGridGroupingConst
 										>Edit Search Criteria</a>
 									<a id="bulkUpdate"
 										class="btn btn-link btn-sm" ng-click="bulkUpdate()"
-										>Update Metadata on Search Results </a>
+										>Update Metadata on All Search Results </a>
 								</div>
 							  </div>
 							  <div class="row" style="background-color: #fff;border-top: 1px solid #ccc;border-bottom: none;">
