--- a/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
@@ -577,7 +577,7 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
 										>Export Search Results</a>
 									<a id="bulkUpdate"
 										class="btn btn-link btn-sm" ng-click="bulkUpdate()"
-										>Update Metadata on Search Results </a>
+										>Update Metadata on All Search Results </a>
 								</div>
 							  </div>
 							  <div class="row" style="background-color: #fff;border-top: 1px solid #ccc;border-bottom: none;">
