--- a/src/hpc-web/src/main/resources/templates/updatemetadatabulk.html
+++ b/src/hpc-web/src/main/resources/templates/updatemetadatabulk.html
@@ -136,7 +136,7 @@
 												<input type="hidden" name="selectedFilePaths" id="selectedFilePaths"
 													th:value="${bulkMetadataUpdateRequest.getSelectedFilePaths()}" />
 												<div class="form-group" th:if="${downloadType == 'collections'}">
-												  <p th:if="${updateAll == 'true'}" th:text="'This page allows you to add or modify metadata for the entire search results. Total records affected: ' + ${totalCount}"></p>
+												  <p th:if="${updateAll == 'true'}" th:text="'This page allows you to add or modify metadata on all search results. Total records affected: ' + ${totalCount}"></p>
 												  <p th:if="${updateAll != 'true'}">This page allows you to add or modify metadata for the selected collections.</p>
 													<table class="table table-bordered  col-md-12" id="metaAttrTable">
 														<thead>
@@ -166,7 +166,7 @@
 													  	<button type="button" class="btn btn-default"
 															onClick="goBack()" id="close">Back</button>
 													  	<button type="button" class="btn btn-md btn-primary"
-															id="primaryButton" onClick="submitBulk()">Save</button>				
+															id="primaryButton" onClick="submitBulk()">Update</button>				
 													  </div>
 													</div>
 												</div>
