HPCDATAMGM-1814: Prevent selection of placeholder entries inside empty collection nodes in Browse menu

--- a/src/hpc-web/src/main/resources/templates/browse.html
+++ b/src/hpc-web/src/main/resources/templates/browse.html
@@ -559,6 +559,15 @@ $(function() {
             	else
             		menuAPI.disable(node.name, ['addCollection','addDatafile','addBulk','refreshNode','loadMore']);
             }
+        },
+        onCanSelectNode: function(node) {
+            if (node.id == "empty") {
+                // Empty placeholder collection nodes cannot be selected
+                return false;
+            }
+            else {
+                return true;
+            }
         }
     });
     
