--- a/src/hpc-web/src/main/resources/templates/updatemetadatabulk.html
+++ b/src/hpc-web/src/main/resources/templates/updatemetadatabulk.html
@@ -147,24 +147,44 @@
 																<th class="col-md-4">Value</th>
 															</tr>
 														</thead>
-														<tbody><tr>
-															<td>
-																<input
-																	type="text" class="form-control"
-																	list="metadataAttributesListId" autocomplete="on"
-																	id="mdname" name="metadataName" placeholder="Enter Metadata Attribute" th:value="${bulkMetadataUpdateRequest.getMetadataName()}" />
-																	<datalist id="metadataAttributesListId">
-																		<option
-																			th:each="metadataAttributeName : ${metadataAttributesList}"
-																			th:value="${metadataAttributeName}" th:text="${metadataAttributeName}">
-																		</option>
-																	</datalist>
+														<tbody>
+															<tr>
+																<td>
+																	<div th:if="${result} != 'true'">
+																		<input type="text" class="form-control" list="metadataAttributesListId" autocomplete="on" id="mdname"
+																			name="metadataName" placeholder="Enter Metadata Attribute"
+																			th:value="${bulkMetadataUpdateRequest.getMetadataName()}" />
+																		<datalist id="metadataAttributesListId">
+																			<option th:each="metadataAttributeName : ${metadataAttributesList}"
+																				th:value="${metadataAttributeName}" th:text="${metadataAttributeName}">
+																			</option>
+																		</datalist>
+																	</div>
+																	<div th:if="${result} == 'true'">
+																		<input type="text" class="form-control" disabled="true" autocomplete="on" id="mdname" name="metadataName"
+																			placeholder="Enter Metadata Attribute" th:value="${bulkMetadataUpdateRequest.getMetadataName()}" />
+																	</div>
 																</td>
-															<td><input class="form-control" type="text" id="mdval" name="metadataValue" placeholder="Enter Metadata Value" th:value="${bulkMetadataUpdateRequest.getMetadataValue()}" /></td>
-														</tr></tbody>
+																<td>
+																	<div th:if="${result} == 'true'"><input class="form-control" disabled="true" type="text" id="mdval"
+																			name="metadataValue" placeholder="Enter Metadata Value"
+																			th:value="${bulkMetadataUpdateRequest.getMetadataValue()}" /></div>
+																	<div th:if="${result} != 'true'"><input class="form-control" type="text" id="mdval" name="metadataValue"
+																			placeholder="Enter Metadata Value" th:value="${bulkMetadataUpdateRequest.getMetadataValue()}" />
+																	</div>
+																</td>
+															</tr>
+														</tbody>
 													</table>
 													<div class="col-sm-offset-2 col-sm-10" align="right" >
-													  <div class="row">
+													  <div class="row" th:if="${result} == 'true'">
+														<button class="btn btn-md btn-primary"
+														id="primaryButton" onClick="return disableRows(event)">Add Metadata</button>
+													  	<button type="button" class="btn btn-md btn-primary"
+															id="primaryButton" onClick="submitBulk()" disabled="true">Update</button>
+														<button type="button" class="btn btn-default" onClick="goBack()" id="close">Cancel</button>
+													  </div>
+													  <div class="row" th:if="${result} != 'true'">
 														<button class="btn btn-md btn-primary"
 														id="primaryButton" onClick="return addMetadata()">Add Metadata</button>
 													  	<button type="button" class="btn btn-md btn-primary"
@@ -214,7 +234,7 @@
 				</div>
 				<div th:if="${errorStatusMessage == '' and pathDetails != null and pathDetails.size() > 0}">
 					<table id="pathDetailsGrid" class="display" style="width:100%">
-						<caption style="font-weight:bold" th:if="${result} == 'true'" th:text="'Results after Bulk Metadata Update with (attribute=' + ${metadataName} + ', value=' + ${metadataValue} + ')'"></caption>
+						<caption style="font-weight:bold" th:if="${result} == 'true'" th:text="'Update Bulk Metadata Results'"></caption>
 						<thead>
 							<tr id='attrRow0'>					
 								<th class="column-heading" id='path2' th:text="Path"></th>
@@ -279,6 +299,11 @@
 			}
 		});
 
+		function disableRows(e) {
+			e.preventDefault();
+			$('#updateform').attr('action', "/bulkupdatemetadata").submit();
+		}
+
 		var rowId = 1;
 		function addMetadata() {
 			rowId++;
@@ -303,8 +328,8 @@
 			row.id = "attrRow"+(rows+1);
 			var cell0 = row.insertCell(0);
 			var cell1 = row.insertCell(1);
-			cell0.innerHTML = '<input type="text" id="addAttrName'+(rows+1)+'" name="addAttrName'+(rows+1)+'" value="'+ displayName+'" onClick="return populateMetadataNamesList('+(rows+1)+');"  placeholder="Enter Metadata Attribute" class="form-control"/> <datalist id="addAttrNameList'+(rows+1)+'"> </datalist>';
-			cell1.innerHTML = '<div class="input-group"><input type="text" id="addAttrValue'+(rows+1)+'"value="'+ displayValue+'" name="addAttrValue'+(rows+1)+'" placeholder="Enter Metadata Value" class="form-control"/><span class="input-group-addon deleteAttribute" title="Delete Attribute"><i class="fa fa-trash"></i></span></div>';
+			cell0.innerHTML = '<input type="text" disabled="true" id="addAttrName'+(rows+1)+'" name="addAttrName'+(rows+1)+'" value="'+ displayName+'" class="form-control"/>';
+			cell1.innerHTML = '<input disabled="true" type="text" id="addAttrValue'+(rows+1)+'"value="'+ displayValue+'" name="addAttrValue'+(rows+1)+'" class="form-control"/>';
 			return true;
 		}
 
@@ -320,13 +345,6 @@
 					$(x).append('<option>' + item + '</option>');
 				});
 			}
-		}
-
-		function enableSave() {
-			$('#primaryButton').removeClass('disabled');
-			$('#primaryButton').prop('disabled', false);
-			$('#permissionsTable input:radio').prop('disabled', false);
-			$('#permissionsTable').removeClass("hidden");
 		}
 		
 		function goBack()
