HPCDATAMGM-1829: Fix placeholders for new attributes in Edit metadata for collection screen

--- a/src/hpc-web/src/main/resources/templates/collection.html
+++ b/src/hpc-web/src/main/resources/templates/collection.html
@@ -453,8 +453,8 @@
 	    row.id = "attrRow"+(rows+1);
 	    var cell0 = row.insertCell(0);
 	    var cell1 = row.insertCell(1);
-	    cell0.innerHTML = '<input type="text" id="addAttrName'+(rows+1)+'" name="addAttrName'+(rows+1)+'" placeholder="Value" class="form-control"/>';
-	    cell1.innerHTML = '<div class="input-group"><input type="text" id="addAttrValue'+(rows+1)+'" name="addAttrValue'+(rows+1)+'" placeholder="Value" class="form-control"/><span class="input-group-addon deleteAttribute" title="Delete Attribute"><i class="fa fa-trash"></i></span></div>';
+	    cell0.innerHTML = '<input type="text" id="addAttrName'+(rows+1)+'" name="addAttrName'+(rows+1)+'" placeholder="Enter Metadata Attribute" class="form-control"/>';
+	    cell1.innerHTML = '<div class="input-group"><input type="text" id="addAttrValue'+(rows+1)+'" name="addAttrValue'+(rows+1)+'" placeholder="Enter Metadata Value" class="form-control"/><span class="input-group-addon deleteAttribute" title="Delete Attribute"><i class="fa fa-trash"></i></span></div>';
 	    return false;
 	}	
 
