--- a/src/hpc-web/src/main/resources/templates/collection.html
+++ b/src/hpc-web/src/main/resources/templates/collection.html
@@ -95,6 +95,11 @@
                     <i class="fa fa-download" title="Download" aria-hidden="true"></i>
                   </a>
                   &nbsp;&nbsp;&nbsp;&nbsp;
+                   <a  class="btn btn-link btn-sm"
+                     th:href="@{../datatransfer(type=collection,path=${collection.getCollection().getCollectionName()})}">
+                    <i class="fa fa-gear" title="Data Transfer" aria-hidden="true"></i>
+                  </a>
+                  &nbsp;&nbsp;&nbsp;&nbsp;
                   <a class="btn btn-link btn-sm"
                      th:href="@{../permissions(assignType=User,type=collection,path=${collection.getCollection().getCollectionName()})}">
                     <i class="fa fa-users" title="Permissions" aria-hidden="true"></i>
@@ -117,6 +122,11 @@
                   <a class="btn btn-link btn-sm"
                      th:href="@{../download(type=collection,path=${collection.getCollection().getCollectionName()})}">
                     <i class="fa fa-download" title="Download" aria-hidden="true"></i>
+                  </a>
+                  &nbsp;&nbsp;&nbsp;&nbsp;
+                   <a  class="btn btn-link btn-sm"
+                     th:href="@{../datatransfer(type=collection,path=${collection.getCollection().getCollectionName()})}">
+                    <i class="fa fa-gear" title="Data Transfer" aria-hidden="true"></i>
                   </a>
                   &nbsp;&nbsp;&nbsp;&nbsp;
                   <a class="btn btn-link btn-sm"
@@ -145,6 +155,11 @@
                   <a class="btn btn-link btn-sm"
                      th:href="@{../download(type=collection,path=${collection.getCollection().getCollectionName()})}">
                     <i class="fa fa-download" title="Download" aria-hidden="true"></i>
+                  </a>
+                  &nbsp;&nbsp;&nbsp;&nbsp;
+                   <a  class="btn btn-link btn-sm"
+                     th:href="@{../datatransfer(type=collection,path=${collection.getCollection().getCollectionName()})}">
+                    <i class="fa fa-gear" title="Data Transfer" aria-hidden="true"></i>
                   </a>
                   &nbsp;&nbsp;&nbsp;&nbsp;
                   <a class="btn btn-link btn-sm"
