--- a/src/hpc-web/src/main/resources/templates/datafile.html
+++ b/src/hpc-web/src/main/resources/templates/datafile.html
@@ -106,6 +106,11 @@
                     <i class="fa fa-download" title="Download" aria-hidden="true"></i>
                   </a>
                   &nbsp;&nbsp;&nbsp;&nbsp;
+                  <a id="datatransferlink" class="btn btn-link btn-sm"
+                     th:href="@{../download(type=datafile,downloadFilePath=${hpcDatafile.getDataObject().getAbsolutePath()})}">
+                    <i class="fa fa-gear" title="Data Transfer" aria-hidden="true"></i>
+                  </a>
+                  &nbsp;&nbsp;&nbsp;&nbsp;
                   <a class="btn btn-link btn-sm"
                      th:href="@{../permissions(assignType=User,type=dataObject,path=${hpcDatafile.getDataObject().getAbsolutePath()})}">
                     <i class="fa fa-users" title="Permissions" aria-hidden="true"></i>
@@ -127,6 +132,11 @@
                   <a id="downloadlink" class="btn btn-link btn-sm"
                      th:href="@{../download(type=datafile,downloadFilePath=${hpcDatafile.getDataObject().getAbsolutePath()})}">
                     <i class="fa fa-download" title="Download" aria-hidden="true"></i>
+                  </a>
+                  &nbsp;&nbsp;&nbsp;&nbsp;
+                  <a id="datatransferlink" class="btn btn-link btn-sm"
+                     th:href="@{../datatransfer(type=datafile,downloadFilePath=${hpcDatafile.getDataObject().getAbsolutePath()})}">
+                    <i class="fa fa-gear" title="Data Transfer" aria-hidden="true"></i>
                   </a>
                   &nbsp;&nbsp;&nbsp;&nbsp;
                   <a class="btn btn-link btn-sm"
@@ -157,6 +167,11 @@
                     <i class="fa fa-download" title="Download" aria-hidden="true"></i>
                   </a>
                   &nbsp;&nbsp;&nbsp;&nbsp;
+                  <a id="datatransferlink" class="btn btn-link btn-sm"
+                     th:href="@{../datatransfer(type=datafile,downloadFilePath=${hpcDatafile.getDataObject().getAbsolutePath()})}">
+                    <i class="fa fa-gear" title="Data Transfer" aria-hidden="true"></i>
+                  </a>
+                  &nbsp;&nbsp;&nbsp;&nbsp;
                   <a class="btn btn-link btn-sm"
                      th:href="@{../permissions(assignType=User,type=dataObject,path=${hpcDatafile.getDataObject().getAbsolutePath()})}">
                     <i class="fa fa-users" title="Permissions" aria-hidden="true"></i>
@@ -178,11 +193,15 @@
                     <i class="fa fa-star-o" title="Bookmark" aria-hidden="true"></i>
                   </a>
 				 </div>
-
 				 <div th:case="'DELETE'">
                   <a id="downloadlink" class="btn btn-link btn-sm"
                      th:href="@{../download(type=datafile,downloadFilePath=${hpcDatafile.getDataObject().getAbsolutePath()})}">
                     <i class="fa fa-download" title="Download" aria-hidden="true"></i>
+                  </a>
+                  &nbsp;&nbsp;&nbsp;&nbsp;
+                  <a id="datatransferlink" class="btn btn-link btn-sm"
+                     th:href="@{../datatransfer(type=datafile,downloadFilePath=${hpcDatafile.getDataObject().getAbsolutePath()})}">
+                    <i class="fa fa-gear" title="Data Transfer" aria-hidden="true"></i>
                   </a>
                   &nbsp;&nbsp;&nbsp;&nbsp;
                   <a class="btn btn-link btn-sm"
