--- a/src/hpc-web/src/main/resources/templates/dataobjectdownloadtask.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectdownloadtask.html
@@ -108,12 +108,30 @@
 									</div>
 									<!-- /.modal-dialog -->
 								</div>
-									<div class="form-group" style="word-break: break-all;">
-										<div class="col-md-12 form-group">
-										    <label for="Name">Task ID:</label> <label
+								  <div class="form-group" style="word-break: break-all;">
+								    <div class="col-md-12 form-group" th:if="${hpcDataObjectDownloadStatusDTO.getRetryTaskId() == null}">
+										<label for="Name">Task ID:</label> <label
 											for="${taskId}"
 											th:text="${taskId}"></label>
-										</div>
+									</div>
+									<div class="col-md-12 form-group" th:if="${hpcDataObjectDownloadStatusDTO.getRetryTaskId() != null}">
+										<label for="Name">Re-initiated Task ID:</label> <label
+											for="${taskId}"
+											th:text="${taskId}"></label>
+									</div>
+									<div class="col-md-12 form-group" th:if="${hpcDataObjectDownloadStatusDTO.getRetryUserId() != null}">
+											<label for="Name">Retry User ID:</label> <label
+											for="${hpcDataObjectDownloadStatusDTO.getRetryUserId()}"
+											th:text="${hpcDataObjectDownloadStatusDTO.getRetryUserId()}"></label>
+									</div>
+									<div class="col-md-12 form-group" th:if="${hpcDataObjectDownloadStatusDTO.getRetryTaskId() != null}">
+										<label for="Name">Previous Task ID:</label>
+										<a th:href="@{/downloadtask(type=${taskType},taskId=${hpcDataObjectDownloadStatusDTO.getRetryTaskId()})}">
+										  <label
+											for="${hpcDataObjectDownloadStatusDTO.getRetryTaskId()}"
+											th:text="${hpcDataObjectDownloadStatusDTO.getRetryTaskId()}"></label>
+										</a>
+									</div>
 										<div class="col-md-12 form-group">
 											<label for="Name">Path:</label> 
 											<a th:href="@{/datafile(action=view,path=${hpcDataObjectDownloadStatusDTO.getPath()})}">
