--- a/src/hpc-web/src/main/resources/templates/dataobjectdownloadtask.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectdownloadtask.html
@@ -98,6 +98,12 @@
 										for="${error}" th:utext="${error}"></label>
 								</div>
 							</div>
+							<div th:if="${message != null}">
+								<div class="alert alert-error">
+									<a class="close" data-dismiss="alert">×</a> <label
+										for="${message}" th:utext="${message}"></label>
+								</div>
+							</div>
 								<!--panel-body start-->
 								<div class="panel-body"  th:if="${hpcDataObjectDownloadStatusDTO != null}">
 								<div class="modal fade" id="downloadModal" tabindex="-1" role="dialog"
