--- a/src/hpc-web/src/main/resources/templates/dataobjectsdownloadtask.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectsdownloadtask.html
@@ -166,7 +166,7 @@
 											th:text="${hpcDataObjectsDownloadStatusDTO.getTaskStatus().value()}"></label>
 									</div>
 									<div class="col-md-12 form-group"  th:if="${hpcDataObjectsDownloadStatusDTO.getDestinationType() != null}">
-										<label for="Name">Destination Type:</label> <label
+										<label for="Name">Destination Type:</label> <label id="destinationType"
 											for="$hpcDataObjectsDownloadStatusDTO.getDestinationType().value()}"
 											th:text="${#strings.replace(hpcDataObjectsDownloadStatusDTO.getDestinationType().value(),'S_3','S3')}"></label>
 									</div>
@@ -481,12 +481,61 @@
 
 					</div>
 				</div>
+				<!-- modal -->
+				<div class="modal fade" id="s3Modal" tabindex="-1" role="dialog"
+					aria-labelledby="s3ModalLabel" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal">&times;</button>
+								<h4 class="modal-title">Re-enter S3 Credentials</h4>
+							</div>
+							<div class="modal-body">
+								<div class="form-group" id="s3Div">
+									<div class="alert-danger" id="mandatory"
+										style="display: none">
+										<p>Please re-enter S3 credentials and region</p>
+									</div>
+									<div class="col-sm-12 column">
+										<label for="accessKey">Access Key:</label> <input
+											type="text" class="form-control"
+											name="accessKey" id="accessKeyId"
+											placeholder="Enter Access Key" size="40" />
+									</div>
+									<div class="col-sm-12 column">
+										<label for="secretKey">Secret Access Key:</label> <input
+											type="password" autocomplete="secret-access-key" class="form-control"
+											name="secretKey" id="secretKeyId"
+											placeholder="Enter Secret Access Key" size="40" />
+									</div>
+									<div class="col-sm-12 column">
+										<label for="region">Region:</label> <input
+											type="text" class="form-control"
+											th:value="${region}"
+											name="region" id="regionId"
+											placeholder="Enter Region (for Example us-east-1)" size="40" />
+									</div>
+									<div class="modal-footer">
+										<button type="button" class="btn btn-md btn-primary"
+											id="retryButton">Retry</button>
+										<button type="button" class="btn btn-default"
+											data-dismiss="modal" id="close">Close</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- modal -->
 				<div class="row"></div>
 	<form class="form-horizontal" id="downloadForm"
 	    th:action="@{/downloadtask}"
 		method="POST">
 		<input type="hidden" id="taskId" name="taskId" th:value="${taskId}"/>
 		<input type="hidden" id="taskType" name="taskType" th:value="${taskType}"/>
+		<input type="hidden" id="accessKey" name="accessKey" />
+		<input type="hidden" id="secretKey" name="secretKey" />
+		<input type="hidden" id="region" name="region" />
 	</form>
 	<form class="form-horizontal" id="cancelForm"
 	    th:action="@{/downloadtask/cancel}"
@@ -520,14 +569,38 @@
 
 $(document).ready(function(){
 	$('#sub-menu-manage').addClass("active");
+	$('body').on('click', '#retryButton', function(event) {
+		var accessKey = document.getElementById("accessKeyId").value;
+		var secretKey = document.getElementById("secretKeyId").value;
+		var region = document.getElementById("regionId").value;
+		if (accessKey == null
+				|| accessKey.trim().length == 0
+				|| secretKey == null
+				|| secretKey.trim().length == 0
+				|| region == null
+				|| region.trim().length == 0) {
+			$("#mandatory").show();
+			return false;
+		}
+		document.getElementById("accessKey").value = accessKey;
+		document.getElementById("secretKey").value = secretKey;
+		document.getElementById("region").value = region;
+		$('.downloadfailed').addClass('disabled');
+		$("#downloadForm").submit();
+	});
 });
 	
 function retryDownload(task, taskType)
 {
-	$('.downloadfailed').addClass('disabled');
 	document.getElementById("taskId").value = task;
 	document.getElementById("taskType").value = taskType;
-	$("#downloadForm").submit();
+	destinationType=$('#destinationType').text();
+	if (destinationType == 'S3') {
+		$('#s3Modal').modal({backdrop: 'static', keyboard: false});
+	} else {
+		$('.downloadfailed').addClass('disabled');
+		$("#downloadForm").submit();
+	}
 	
 }
 
