HPCDATAMGM-1828: The Aspera bucket is set to test

--- a/src/hpc-web/src/main/resources/templates/download.html
+++ b/src/hpc-web/src/main/resources/templates/download.html
@@ -148,7 +148,7 @@
 										<div class="pull-left" style="margin-left: 15px">
 											<label class="radio-inline"><input type="radio"
 											name="searchType" id="searchTypeAspera" value="aspera"
-											onChange="display('aspera')"/>Db Gap</label>
+											onChange="display('aspera')"/>dbGaP</label>
 										</div>
 								</div>
 		                        
@@ -273,7 +273,7 @@
 									<div class="col-sm-12 column">
 										<label for="bucketName">Aspera Bucket:</label>
 										<input
-											type="text" class="form-control" name="asperaBucketName" th:value="${asperaBucketName}"
+											type="text" class="form-control" name="asperaBucketName" th:value="test" readonly="readonly"
 											id="asperaBucketName" placeholder="Enter Aspera Bucket Name" />
 									</div>
 									<div class="col-sm-12 column">
